# ros_lebot

./: CMakeLists.txt  README.md  debuggin_protocol.txt  fit_thrower.py  package.xml  package_dependencies.txt  setup.py  thrower_values.csv  vals.csv
Gerardo_F360/Assemblies/: AssemblyPC v3.f3z
Gerardo_F360/Components/: RockerSwitch v2.f3d
Gerardo_F360/Hardware/: AssemblySpacer45 v3.f3z  M3x12 v1.f3d  M3x6 v2.f3d
Gerardo_F360/OmniWheels/: Omniwheel v3.f3z
Gerardo_F360/Structures/: CameraHolderSide v2.f3d  CameraLevelLock v2.f3d  HolderThrowerMotor v7.f3d  MotorDocking v5.f3d
Gerardo_F360/Thrower/: AssemblyHolderThrowerMotor v5.f3z
additional_msgs/: Depth_BallLocation.msg  Rect.msg
launch/: lebot.launch  lebotcontrolermovement.launch
msg/: Depth_BasketLocation.msg  LineLocation.msg  Ref_Command.msg  Thrower.msg  Wheel.msg
scripts/: ball_srv  ball_srv.py  basket_srv  basket_srv.py  calcAngle.py  calculate_omni.py  color_parameters.json  find_ball.py  find_basket.py  get_distance_ball.py  get_distance_basket.py  move_somewhere.py  myControllerInput.py  referee.py  state_machine.py  theBall.py  theBasket.py  theWheel.py  topic_colorframe_depth.py  transfCamCoord.py  websocket.js
scripts/movement/: approachThrow.py
src/: ball_srv.py
src/launch/: .debug_state.launch.swp  calc_thrower.launch  debug_basket.launch  debug_logic.launch  debug_mask.launch  debug_state.launch  finds_a_ball.launch  lebot.launch  manual_control.launch  pre.launch
src/scripts/: .check_state_machine.py.swp  .theBasket.py.swp  ball_srv  ball_srv.py  basket_srv  basket_srv.py  calcAngle.py  (+28 more)
(+78 files in other folders)
