<?xml version="1.0"?>
<package format="2">
  <name>lebot</name>
  <version>0.0.0</version>
  <description>The lebot package</description>
  <maintainer email="lebot@todo.todo"></maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ds4_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_image_view</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>ds4_driver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ds4_driver</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>

